BMSSimplificationEclipseWS/EUFULL-Org-Backup/src/objects/Meeting_Planned_Participant_BMS_EMEA__c.object
<CustomObject>
    <description>VPRO Oct 2013: child object of Meetings (Medical Events) to track the estimated number of Participants per Type in the Planning phase. Real attendees are tracked in the Event Attendee object.</description>
    <fields>
        <fullName>Company_BMS_EMEA__c</fullName>
        <description>VPRO Oct 2013: Company of the JV Partner Employee.</description>
        <label>Company</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DHG_is_required_BMS_EMEA__c</fullName>
        <description>VPRO Nov 2013: field specific to Germany.</description>
        <label>DHG is required</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Function_TherArea_Specialty_BMS_EMEA__c</fullName>
        <description>VPRO Oct 2013: function or Therapeutic Area of the group of Planned Participants.</description>
        <label>Function / Therapeutic Area / Specialty</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Meeting_BMS_EMEA__c</fullName>
        <description>VPRO Oct 2013: Meeting Planned Participant is a child object of Meetings.</description>
        <label>Meeting</label>
        <referenceTo>Medical_Event_vod__c</referenceTo>
        <relationshipLabel>Meeting Planned Participants</relationshipLabel>
        <relationshipName>Meeting_Planned_Participants</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Number_BMS_EMEA__c</fullName>
        <description>VPRO Oct 2013: Number of Planned Participants, populated from the parent Master File.</description>
        <inlineHelpText>Number proposed in the related Master File.</inlineHelpText>
        <label>Number</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sponsored_Participant_BMS_EMEA__c</fullName>
        <description>VPRO Oct 2013: name of the Sponsored Participant</description>
        <label>Sponsored Participant</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_Number_BMS_EMEA__c</fullName>
        <description>VPRO Oct 2013: Number of Planned Participants, user input.</description>
        <inlineHelpText>User input</inlineHelpText>
        <label>z_DELETE_Number</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Meeting Planned Participant</label>
    <nameField>
        <displayFormat>MPP-{00000}</displayFormat>
        <label>Meeting Planned Participant Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Meeting Planned Participants</pluralLabel>
    <recordTypes>
        <fullName>BMS_EMEA_Audience</fullName>
        <active>true</active>
        <description>Non sponsored or contracted individuals attending event</description>
        <label>BMS - EMEA - Audience</label>
    </recordTypes>
    <recordTypes>
        <fullName>BMS_EMEA_BMS_Employee</fullName>
        <active>true</active>
        <description>Record Type for BMS Employee planned participants</description>
        <label>BMS - EMEA - BMS Employee</label>
    </recordTypes>
    <recordTypes>
        <fullName>BMS_EMEA_JV_Partner_Employee</fullName>
        <active>false</active>
        <description>Record Type for JV Employee Planned Participants</description>
        <label>BMS - EMEA - JV Partner Employee</label>
    </recordTypes>
    <recordTypes>
        <fullName>BMS_EMEA_Speaker</fullName>
        <active>true</active>
        <description>Details of individuals with whom BMS will have a contract.</description>
        <label>BMS - EMEA - Speaker</label>
    </recordTypes>
    <recordTypes>
        <fullName>BMS_EMEA_Sponsored</fullName>
        <active>true</active>
        <description>Details of individuals with whom BMS will sponsor to a third party event</description>
        <label>BMS - EMEA - Sponsored</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>BMS_EMEA_FFM_No_Modification</fullName>
        <active>true</active>
        <description>VPRO May 12: Validation rule that prevents a user from editing or deleting a record that is no longer in the meeting planning phase.</description>
        <errorConditionFormula>AND( 
TEXT( Meeting_BMS_EMEA__r.FFM_Step_BMS_EMEA__c ) = &apos;Meeting Post-Execution&apos;, 
AND( 
$Profile.Name &lt;&gt; &apos;System Administrator&apos;, 
AND( 
$Profile.Name &lt;&gt; &apos;BMS - Integration User&apos;) 
) 
)</errorConditionFormula>
        <errorMessage>You are not allowed to edit or delete a record as the Meeting has passed the Planning phase.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>BMS_EMEA_FFM_Plan_Participant_Co_Author</fullName>
        <active>false</active>
        <description>VPRO 7 March 2014: Validation to not allow a co-author of the meeting to modify any fields.</description>
        <errorConditionFormula>AND(
$User.Id &lt;&gt; Meeting_BMS_EMEA__r.OwnerId,
TEXT(Meeting_BMS_EMEA__r.FFM_Step_BMS_EMEA__c) = &apos;Meeting Post-Execution&apos;,
OR( 
$Profile.Name = &apos;BMS - EMEA - REP - MSL&apos;, 
$Profile.Name = &apos;BMS - EMEA - REP - SALES&apos;) 
)</errorConditionFormula>
        <errorMessage>You are not allowed to change any fields as you are co-author of the Meeting.</errorMessage>
    </validationRules>
</CustomObject>